--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.15.0",
+    "@react-google-maps/api": "^2.1.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -12,7 +14,9 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0"
+    "react-places-autocomplete": "^7.3.0",
+    "react-scripts": "^3.3.0",
+    "use-places-autocomplete": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
